Fix atlas.css: remove useless horizontal scrollbar

--- a/static/css/atlas.css
+++ b/static/css/atlas.css
@@ -61,8 +61,7 @@ body {
 }
 
 #page {
-  padding-left: 70px;
-  padding-right: 10px;
+  padding-left: 75px;
   margin-top: 25px;
 }
 
